Fixes on contact form

--- a/wp-content/themes/astra-child/style.css
+++ b/wp-content/themes/astra-child/style.css
@@ -13,3 +13,7 @@ Template: astra
 .ulisting-form-gruop > label:first-child{
     font-weight:bold;
 }
+
+.attribute_contact_email{
+    display:none;
+}
